--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -7,7 +7,7 @@
   <body>
     {{> header}}
 
-    <p>Portfolio page here</p>
+    <p>project page text would go here</p>
 
     {{> footer}}
   </body>
